--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -5,5 +5,17 @@
   "home.roads.title": "Yol Haritası",
   "home.roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Roads ile kodlama evreninde adım adım ilerleyin!",
   "home.labs.title": "Laboratuvarlar",
-  "home.labs.content": "Labs ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!"
+  "home.labs.content": "Labs ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
+  "roads.title": "Yollar",
+  "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Roads ile kodlama evreninde adım adım ilerleyin!",
+  "register.fullname": "Ad Soyad",
+  "register.username": "Kullanıcı adı",
+  "register.email": "E-posta",
+  "register.password": "Şifre",
+  "register.accept": "Gizlilik politakasını & şartları",
+  "register.terms": " kabul ediyorum ",
+  "register.or": "ya da",
+  "register.signup": "Kayıt Ol",
+  "register.already": "Zaten hesabın var mı?",
+  "register.login": "Giriş yap"
 }
