--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -3,5 +3,15 @@
   "active_locale": "English",
   "home.content": "Master diverse coding languages, bring your ideas to life, and experience a fun and interactive learning journey that surpasses traditional methods.",
   "roads.title": "Roads",
-  "roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!"
+  "roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!",
+  "register.fullname": "Full Name",
+  "register.username": "Username",
+  "register.email": "E-mail",
+  "register.password": "Password",
+  "register.accept": "I accept the ",
+  "register.terms": "privacy policy & terms ",
+  "register.or": "or",
+  "register.signup": "Sign Up",
+  "register.already": "Already have an account?",
+  "register.login": "Login"
 }
