--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -3,12 +3,12 @@
   "active_locale": "English",
   "home.content": "Master diverse coding languages, bring your ideas to life, and experience a fun and interactive learning journey that surpasses traditional methods.",
   "home.roads.title": "Roads",
-  "home.roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!",
+  "home.roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
   "home.labs.title": "Labs",
   "home.labs.content": "Improve your algorithm and programming skills, get practical experience and put your coding knowledge into practice with Labs!",
   "roads.title": "Roads",
-  "roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!",
-  "register.fullname": "Full Name",
+  "roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
+  "register.fullname": "Full name",
   "register.username": "Username",
   "register.email": "E-mail",
   "register.password": "Password",
