--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -3,11 +3,11 @@
   "active_locale": "Türkçe",
   "home.content": "Farklı kodlama dillerinde ustalaşın, fikirlerinizi hayata geçirin ve geleneksel yöntemleri aşan eğlenceli ve etkileşimli bir öğrenme yolculuğunu deneyimleyin.",
   "home.roads.title": "Yol Haritası",
-  "home.roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Roads ile kodlama evreninde adım adım ilerleyin!",
+  "home.roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritası ile kodlama evreninde adım adım ilerleyin!",
   "home.labs.title": "Laboratuvarlar",
-  "home.labs.content": "Labs ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
-  "roads.title": "Yollar",
-  "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Roads ile kodlama evreninde adım adım ilerleyin!",
+  "home.labs.content": "Laboratuvarlar ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
+  "roads.title": "Yol haritaları",
+  "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
   "register.fullname": "Ad Soyad",
   "register.username": "Kullanıcı adı",
   "register.email": "E-posta",
