Login Page is done.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -16,6 +16,11 @@
   "register.signup": "Sign Up",
   "register.already": "Already have an account?",
   "register.login": "Login",
+  "roads.title": "Roads",
+  "roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!",
+  "login.email": "Email",
+  "login.password": "Password",
+  "login.remember.me": "Remember Me",
   "login.forget.password": "Forgot Password?",
   "login.login.button": "Login",
   "login.divider.or": "or",
