--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -18,6 +18,9 @@
   "register.signup": "Kayıt Ol",
   "register.already": "Zaten hesabın var mı?",
   "register.login": "Giriş yap",
+  "login.email": "Eposta",
+  "login.password": "Parola",
+  "login.remember.me": "Beni Hatırla",
   "login.forget.password": "Şifreni mi Unuttun?",
   "login.login.button": "Giriş",
   "login.divider.or": "ya da",
