--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -8,14 +8,23 @@
   "home.labs.content": "Laboratuvarlar ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
   "roads.title": "Yol haritaları",
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
-  "register.fullname": "Ad Soyad",
+  "register.name": "Ad",
+  "register.surname": "Soy Adı",
   "register.username": "Kullanıcı adı",
   "register.email": "E-posta",
-  "register.password": "Şifre",
+  "register.password": "Parola",
   "register.accept": "Gizlilik politakasını & şartları",
   "register.terms": " kabul ediyorum ",
   "register.or": "ya da",
   "register.signup": "Kayıt Ol",
   "register.already": "Zaten hesabın var mı?",
-  "register.login": "Giriş yap"
+  "register.login": "Giriş yap",
+  "register.nameError": "Ad gerekli",
+  "register.surnameError": "Soy adı gerekli",
+  "register.usernameError": "Kullanıcı adı gerekli",
+  "register.emailError": "Geçersiz e-posta",
+  "register.emailRequiredError": "E-posta gerekli",
+  "register.passwordError": "Parola gerekli",
+  "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
+  "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin"
 }
