--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -13,14 +13,26 @@
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
   "register.name": "Ad",
   "register.surname": "Soy Adı",
+  "register.name": "Ad",
+  "register.surname": "Soy Adı",
   "register.username": "Kullanıcı adı",
   "register.email": "E-posta",
+  "register.password": "Parola",
   "register.password": "Parola",
   "register.accept": "Gizlilik politakasını & şartları",
   "register.terms": " kabul ediyorum ",
   "register.or": "ya da",
   "register.signup": "Kayıt Ol",
   "register.already": "Zaten hesabın var mı?",
+  "register.login": "Giriş yap",
+  "register.nameError": "Ad gerekli",
+  "register.surnameError": "Soy adı gerekli",
+  "register.usernameError": "Kullanıcı adı gerekli",
+  "register.emailError": "Geçersiz e-posta",
+  "register.emailRequiredError": "E-posta gerekli",
+  "register.passwordError": "Parola gerekli",
+  "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
+  "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin",
   "register.login": "Giriş yap",
   "register.nameError": "Ad gerekli",
   "register.surnameError": "Soy adı gerekli",
