--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -31,6 +31,15 @@
   "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
   "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin",
   "register.login": "Giriş yap",
+  "register.nameError": "Ad gerekli",
+  "register.surnameError": "Soy adı gerekli",
+  "register.usernameError": "Kullanıcı adı gerekli",
+  "register.emailError": "Geçersiz e-posta",
+  "register.emailRequiredError": "E-posta gerekli",
+  "register.passwordError": "Parola gerekli",
+  "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
+  "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin",
+  "register.login": "Giriş yap",
   "login.email": "Eposta",
   "login.password": "Parola",
   "login.remember.me": "Beni Hatırla",
