--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -8,13 +8,16 @@
   "home.labs.content": "Laboratuvarlar ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
   "roads.title": "Yol haritaları",
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
-  "register.name": "Ad",
-  "register.surname": "Soy Adı",
-  "register.name": "Ad",
-  "register.surname": "Soy Adı",
+  "login.email": "Eposta",
+  "login.password": "Parola",
+  "login.remember.me": "Beni Hatırla",
+  "login.forget.password": "Şifreni mi Unuttun?",
+  "login.login.button": "Giriş",
+  "login.divider.or": "ya da",
+  "login.new.on.platform": "Platformumuzda yeni misiniz?",
+  "login.create.new.account": "Hesap Oluştur",
   "register.username": "Kullanıcı adı",
   "register.email": "E-posta",
-  "register.password": "Parola",
   "register.password": "Parola",
   "register.accept": "Gizlilik politakasını & şartları",
   "register.terms": " kabul ediyorum ",
@@ -30,22 +33,6 @@
   "register.passwordError": "Parola gerekli",
   "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
   "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin",
-  "register.login": "Giriş yap",
-  "login.email": "Eposta",
-  "login.password": "Parola",
-  "login.remember.me": "Beni Hatırla",
-  "login.forget.password": "Şifreni mi Unuttun?",
-  "login.login.button": "Giriş",
-  "login.divider.or": "ya da",
-  "login.new.on.platform": "Platformumuzda yeni misiniz?",
-  "login.create.new.account": "Hesap Oluştur"
-  "register.login": "Giriş yap",
-  "register.nameError": "Ad gerekli",
-  "register.surnameError": "Soy adı gerekli",
-  "register.usernameError": "Kullanıcı adı gerekli",
-  "register.emailError": "Geçersiz e-posta",
-  "register.emailRequiredError": "E-posta gerekli",
-  "register.passwordError": "Parola gerekli",
-  "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
-  "register.checkboxError": "Devam etmek için lütfen gizlilik politikasını & şartları kabul edin"
+  "register.githubProfile": "Github Kullanıcı adı",
+  "register.githubProfileError": "Github Kullanıcı adı gereklidir"
 }
