password field end adornment z-index fix

--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -11,13 +11,16 @@
   "home.labs.content": "Laboratuvarlar ile algoritma ve programlama becerilerinizi geliştirin, pratik deneyim kazanın ve kodlama bilginizi uygulamaya geçirin!",
   "roads.title": "Yol haritaları",
   "roads.content": "Yazılım dillerinin temelini sağlam bir şekilde atın ve Yol haritaları ile kodlama evreninde adım adım ilerleyin!",
-  "register.name": "Ad",
-  "register.surname": "Soy Adı",
-  "register.name": "Ad",
-  "register.surname": "Soy Adı",
+  "login.email": "Eposta",
+  "login.password": "Parola",
+  "login.remember.me": "Beni Hatırla",
+  "login.forget.password": "Şifreni mi Unuttun?",
+  "login.login.button": "Giriş",
+  "login.divider.or": "ya da",
+  "login.new.on.platform": "Platformumuzda yeni misiniz?",
+  "login.create.new.account": "Hesap Oluştur",
   "register.username": "Kullanıcı adı",
   "register.email": "E-posta",
-  "register.password": "Parola",
   "register.password": "Parola",
   "register.accept": "Gizlilik politakasını & şartları",
   "register.terms": " kabul ediyorum ",
