password field end adornment z-index fix

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -9,32 +9,6 @@
   "home.roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
   "home.labs.title": "Labs",
   "home.labs.content": "Improve your algorithm and programming skills, get practical experience and put your coding knowledge into practice with Labs!",
-  "roads.title": "Roads",
-  "roads.content": "Lay the basics of programming (software) languages firmly and move step by step through the coding universe with Roads!",
-  "register.name": "Name",
-  "register.surname": "Surname",
-  "register.name": "Name",
-  "register.surname": "Surname",
-  "register.username": "Username",
-  "register.email": "E-mail",
-  "register.password": "Password",
-  "register.accept": "I accept the ",
-  "register.terms": "privacy policy & terms ",
-  "register.or": "or",
-  "register.signup": "Sign Up",
-  "register.already": "Already have an account?",
-  "register.login": "Login",
-  "register.nameError": "Name is required",
-  "register.surnameError": "Surname is required",
-  "register.usernameError": "Username is required",
-  "register.emailError": "Invalid email",
-  "register.emailRequiredError": "Email is required",
-  "register.passwordError": "Password is required",
-  "register.passwordMinError": "Password must be at least 8 characters",
-  "register.checkboxError": "Please accept the policy & terms to proceed",
-  "register.login": "Login",
-  "roads.title": "Roads",
-  "roads.content": "Lay the basis of software languages firmly and move step by step through the coding universe with Roads!",
   "login.email": "Email",
   "login.password": "Password",
   "login.remember.me": "Remember Me",
@@ -61,4 +35,26 @@
   "settings.old.password" : "Current Password",
   "settings.new.password" : "New Password",
   "settings.confirm.password" : "Confirm New Password"
+  "login.create.new.account": "Create an account",
+  "register.login": "Login",
+  "register.nameError": "Name is required",
+  "register.surnameError": "Surname is required",
+  "register.usernameError": "Username is required",
+  "register.emailError": "Invalid email",
+  "register.emailRequiredError": "Email is required",
+  "register.passwordError": "Password is required",
+  "register.passwordMinError": "Password must be at least 8 characters",
+  "register.checkboxError": "Please accept the policy & terms to proceed",
+  "register.name": "Name",
+  "register.surname": "Surname",
+  "register.username": "Username",
+  "register.email": "E-mail",
+  "register.password": "Password",
+  "register.accept": "I accept the ",
+  "register.terms": "privacy policy & terms ",
+  "register.or": "or",
+  "register.signup": "Sign Up",
+  "register.already": "Already have an account?",
+  "register.githubProfile": "Github Username",
+  "register.githubProfileError": "Github username is required"
 }
