--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -1,4 +1,7 @@
 {
+  "all": "Hepsi",
+  "in_progress": "Devam ediyor",
+  "completed": "Tamamlandı",
   "home.title": "CodinLab'a Hoşgeldiniz",
   "active_locale": "Türkçe",
   "home.content": "Farklı kodlama dillerinde ustalaşın, fikirlerinizi hayata geçirin ve geleneksel yöntemleri aşan eğlenceli ve etkileşimli bir öğrenme yolculuğunu deneyimleyin.",
@@ -26,5 +29,6 @@
   "login.divider.or": "ya da",
   "login.new.on.platform": "Platformumuzda yeni misiniz?",
   "login.create.new.account": "Hesap Oluştur",
-  "labs.search.placeholder": "Lablarda ara"
+  "labs.search.placeholder": "Lablarda ara",
+  "labs.sort_the_labs": "Labları sırala"
 }
