--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -38,5 +38,12 @@
   "admin.settings.button" : "Ayarlar",
   "admin.profile.button" : "Kullanıcılar",
   "admin.center.title" : "Yönetim Merkezi",
-  "admin.language.rates" : "Yazılım Dil İlerleme Oranları"
+  "admin.language.rates" : "Yazılım Dil İlerleme Oranları",
+  "admin.change.button" : "Değisiklikleri Kaydet",
+  "admin.password.button" : "Sifreyi Değistir",
+  "admin.change.username" : "Kullanıcı Adı",
+  "admin.change.github" : "Github Kullanıcı Adı",
+  "admin.old.password" : "Mevcut Şifre",
+  "admin.new.password" : "Yeni Şifre",
+  "admin.confirm.password" : "Şifreyi Onayla"
 }
