added settings page for user
added settings page for user and edit common for settings page ( i used admin.password... but now i use settings.password  ) and edit acl for setting user.

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -37,13 +37,14 @@
   "admin.activity.content" :"Activities are measured by the completion of roads and labs.",
   "admin.settings.button" : "Settings",
   "admin.profile.button" : "Users",
-   "admin.center.title" : "Admin Center",
-  "admin.language.rates" : "Languages Usage Rates",
-  "admin.change.button" : "Save Changes",
-  "admin.password.button" : "Save Password",
-  "admin.change.username" : "Username",
-  "admin.change.github" : "Github Username",
-  "admin.old.password" : "Current Password",
-  "admin.new.password" : "New Password",
-  "admin.confirm.password" : "Confirm New Password"
+  "admin.center.title" : "Admin Center",
+  "settings.page.title" : "General Settings",
+  "settings.language.rates" : "Languages Usage Rates",
+  "settings.change.button" : "Save Changes",
+  "settings.password.button" : "Save Password",
+  "settings.change.username" : "Username",
+  "settings.change.github" : "Github Username",
+  "settings.old.password" : "Current Password",
+  "settings.new.password" : "New Password",
+  "settings.confirm.password" : "Confirm New Password"
 }
