locales and call register api

--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -20,7 +20,14 @@
   "login.new.on.platform": "Platformumuzda yeni misiniz?",
   "login.create.new.account": "Hesap Oluştur",
   "register.username": "Kullanıcı adı",
-  "register.email": "E-posta",
+  "register.githubProfile": "Github kullanıcı adı",
+  "register.githubProfileError": "Github kullanıcı adı gereklidir",
+  "register.nameError": "Ad gereklidir",
+  "register.surnameError": "Soy adı gereklidir",
+  "register.usernameError": "Kullanıcı adı gereklidir",
+  "register.passwordError": "Parola gereklidir",
+  "register.passwordMinError": "Parola en az 8 karakter olmalıdır",
+  "register.checkboxError": "Devam etmek için lütfen politikayı ve şartları kabul edin",
   "register.password": "Parola",
   "register.accept": "Gizlilik politakasını & şartları",
   "register.terms": " kabul ediyorum ",
@@ -65,20 +72,20 @@
   "login.create.new.account": "Hesap Oluştur",
   "labs.search.placeholder": "Lablarda ara",
   "labs.sort_the_labs": "Labları sırala",
-  "admin.time.title" : "Harcanan Zaman & Diller",
-  "admin.time.content" : "Bu grafik, haftalık bazda hangi yazılım dillerinde ne kadar zaman harcandığını göstermektedir.",
-  "admin.activity.title" : "Aktivite takvimi",
-  "admin.activity.content" :"Aktivite etkinlikleri laboratuvarların tamamlanmasıyla ölçülür.",
-  "admin.settings.button" : "Ayarlar",
-  "admin.profile.button" : "Kullanıcılar",
-  "admin.center.title" : "Yönetim Merkezi",
-  "admin.language.rates" : "Yazılım Dil İlerleme Oranları",
-  "settings.page.title" : "Ayarlar",
-  "settings.change.button" : "Değisiklikleri Kaydet",
-  "settings.password.button" : "Sifreyi Değistir",
-  "settings.change.username" : "Kullanıcı Adı",
-  "settings.change.github" : "Github Kullanıcı Adı",
-  "settings.old.password" : "Mevcut Şifre",
-  "settings.new.password" : "Yeni Şifre",
-  "settings.confirm.password" : "Şifreyi Onayla"
+  "admin.time.title": "Harcanan Zaman & Diller",
+  "admin.time.content": "Bu grafik, haftalık bazda hangi yazılım dillerinde ne kadar zaman harcandığını göstermektedir.",
+  "admin.activity.title": "Aktivite takvimi",
+  "admin.activity.content": "Aktivite etkinlikleri laboratuvarların tamamlanmasıyla ölçülür.",
+  "admin.settings.button": "Ayarlar",
+  "admin.profile.button": "Kullanıcılar",
+  "admin.center.title": "Yönetim Merkezi",
+  "admin.language.rates": "Yazılım Dil İlerleme Oranları",
+  "settings.page.title": "Ayarlar",
+  "settings.change.button": "Değisiklikleri Kaydet",
+  "settings.password.button": "Sifreyi Değistir",
+  "settings.change.username": "Kullanıcı Adı",
+  "settings.change.github": "Github Kullanıcı Adı",
+  "settings.old.password": "Mevcut Şifre",
+  "settings.new.password": "Yeni Şifre",
+  "settings.confirm.password": "Şifreyi Onayla"
 }
