--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -19,36 +19,34 @@
   "login.create.new.account": "Create an account",
   "labs.search.placeholder": "Search in labs",
   "labs.sort_the_labs": "Sort the labs",
-  "admin.time.title" : "Time Spent & Languages",
-  "admin.time.content" : "This graph shows how much time is spent in which software languages on a weekly basis.",
-  "admin.activity.title" : "Activity Calendar",
-  "admin.activity.content" :"Activities are measured by the completion of roads and labs.",
-  "admin.settings.button" : "Settings",
-  "admin.profile.button" : "Users",
-  "admin.center.title" : "Admin Center",
-  "settings.page.title" : "General Settings",
-  "settings.language.rates" : "Languages Usage Rates",
-  "settings.change.button" : "Save Changes",
-  "settings.password.button" : "Save Password",
-  "settings.change.username" : "Username",
-  "settings.change.github" : "Github Username",
-  "settings.old.password" : "Current Password",
-  "settings.new.password" : "New Password",
-  "settings.confirm.password" : "Confirm New Password"
-  "login.create.new.account": "Create an account",
+  "admin.time.title": "Time Spent & Languages",
+  "admin.time.content": "This graph shows how much time is spent in which software languages on a weekly basis.",
+  "admin.activity.title": "Activity Calendar",
+  "admin.activity.content": "Activities are measured by the completion of roads and labs.",
+  "admin.settings.button": "Settings",
+  "admin.profile.button": "Users",
+  "admin.center.title": "Admin Center",
+  "settings.page.title": "General Settings",
+  "settings.language.rates": "Languages Usage Rates",
+  "settings.change.button": "Save Changes",
+  "settings.password.button": "Save Password",
+  "settings.change.username": "Username",
+  "settings.change.github": "Github Username",
+  "settings.old.password": "Current Password",
+  "settings.new.password": "New Password",
+  "settings.confirm.password": "Confirm New Password",
   "register.login": "Login",
   "register.nameError": "Name is required",
   "register.surnameError": "Surname is required",
   "register.usernameError": "Username is required",
-  "register.emailError": "Invalid email",
-  "register.emailRequiredError": "Email is required",
   "register.passwordError": "Password is required",
   "register.passwordMinError": "Password must be at least 8 characters",
   "register.checkboxError": "Please accept the policy & terms to proceed",
   "register.name": "Name",
   "register.surname": "Surname",
   "register.username": "Username",
-  "register.email": "E-mail",
+  "register.githubProfile": "Github Username",
+  "register.githubProfileError": "Github Username is required",
   "register.password": "Password",
   "register.accept": "I accept the ",
   "register.terms": "privacy policy & terms ",
