--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -47,16 +47,12 @@
   "settings.usernameError": "Username is required",
   "settings.invalidError": "Invalid email",
   "settings.emailError": "Email is required",
-  "settings.currentPasswordError": "Current password is required",
+  "settings.nameError" : "Name is required",
+  "settings.surnameError" : "Surname is required",
+  "settings.githubError" : "Github username is required",
+  "settings.oldPasswordError": "Current password is required",
   "settings.newPasswordError": "New password is required",
   "settings.confirmPasswordError": "Passwords do not match",
-  "register.login": "Login",
-  "register.nameError": "Name is required",
-  "register.surnameError": "Surname is required",
-  "register.usernameError": "Username is required",
-  "register.passwordError": "Password is required",
-  "register.passwordMinError": "Password must be at least 8 characters",
-  "register.checkboxError": "Please accept the policy & terms to proceed",
   "register.name": "Name",
   "register.surname": "Surname",
   "register.username": "Username",
@@ -77,10 +73,11 @@
   "register.checkboxError": "Please accept the policy & terms to proceed",
   "register.githubProfile": "Github Username",
   "register.githubProfileError": "Github username is required",
-  "changePassword.currentPasswordError": "Current password is required",
+  "changePassword.oldPasswordError": "Current password is required",
   "changePassword.newPasswordError": "New password is required",
   "changePassword.passwordMinError" : "Password must be at least 8 characters",
-  "changePassword.confirmPasswordError": "Passwords do not match"
+  "changePassword.confirmPasswordError": "Passwords do not match",
+  "settings.change.name" : "Name",
+  "settings.change.surname" : "Surname"
 
-  
 }
