--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -63,32 +63,21 @@
   "userlist.level.name" : "Level",
   "userlist.best.name" : "En İyi Oldugu Dil" ,
   "users.search.placeholder": "Kullanıcılarda ara",
-  "users.sort_the_labs": "Kullanıcıları Sırala"
-  "admin.time.title": "Harcanan Zaman & Diller",
-  "admin.time.content": "Bu grafik, haftalık bazda hangi yazılım dillerinde ne kadar zaman harcandığını göstermektedir.",
-  "admin.activity.title": "Aktivite takvimi",
-  "admin.activity.content": "Aktivite etkinlikleri laboratuvarların tamamlanmasıyla ölçülür.",
-  "admin.settings.button": "Ayarlar",
-  "admin.profile.button": "Kullanıcılar",
-  "admin.center.title": "Yönetim Merkezi",
-  "admin.language.rates": "Yazılım Dil İlerleme Oranları",
-  "settings.page.title": "Ayarlar",
-  "settings.change.button": "Değisiklikleri Kaydet",
-  "settings.password.button": "Sifreyi Değistir",
-  "settings.change.username": "Kullanıcı Adı",
-  "settings.change.github": "Github Kullanıcı Adı",
-  "settings.old.password": "Mevcut Şifre",
-  "settings.new.password": "Yeni Şifre",
-  "settings.confirm.password": "Şifreyi Onayla",
+  "users.sort_the_labs": "Kullanıcıları Sırala",
   "settings.usernameError": "Kullanıcı adı gereklidir",
   "settings.invalidError": "Geçersiz e-posta",
   "settings.emailError": "E-posta gereklidir",
+  "settings.githubError" : "Github kullanıcı adı gereklidir",
+  "settings.nameError" : "İsim gereklidir",
+  "settings.surnameError" : "Soyisim gereklidir",
   "settings.currentPasswordError": "Mevcut şifre gereklidir",
   "settings.newPasswordError": "Yeni şifre gereklidir",
   "settings.confirmPasswordError": "Şifreler eşleşmiyor",
-  "changePassword.currentPasswordError": "Mevcut şifre gereklidir",
+  "changePassword.oldPasswordError": "Mevcut şifre gereklidir",
   "changePassword.newPasswordError": "Yeni şifre gereklidir",
   "changePassword.passwordMinError" : "Şifre en az 8 karakter olmalıdır",
-  "changePassword.confirmPasswordError": "Şifreler eşleşmiyor"
+  "changePassword.confirmPasswordError": "Şifreler eşleşmiyor",
+  "settings.change.name" : "İsim",
+  "settings.change.surname" : "Soyisim" 
 }
 
