--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -22,6 +22,10 @@
   "login.passwordError": "Password is required",
   "labs.search.placeholder": "Search in labs",
   "labs.sort_the_labs": "Sort the labs",
+  "roads.search.placeholder": "Search in roads",
+  "roads.sort_the_labs": "Sort the roads",
+  "roads.search.placeholder": "Search in roads",
+  "roads.sort_the_labs": "Sort the roads",
   "admin.time.title": "Time Spent & Languages",
   "admin.time.content": "This graph shows how much time is spent in which software languages on a weekly basis.",
   "admin.activity.title": "Activity Calendar",
