language road page design completed, locales updated

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -26,6 +26,7 @@
   "roads.sort_the_labs": "Sort the roads",
   "roads.search.placeholder": "Search in roads",
   "roads.sort_the_labs": "Sort the roads",
+  "roads.path.next_path": "Next Path",
   "userlist.order.name" : "Order",
   "userlist.username.name" : "Username",
   "userlist.level.name" : "Level",
