--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -86,6 +86,8 @@
   "labs.question.failed" : "Başarısız oldu!",
   "labs.question.output" : "Çıktı:",
   "labs.question.expected" : "Beklenen:",
-  "labs.question.hint" : "İpucu"
+  "labs.question.hint" : "İpucu",
+  "settings.change.surname" : "Soyisim",
+  "roads.path.start_road": "Yola Başla"
 }
 
