--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -83,6 +83,6 @@
   "changePassword.passwordMinError" : "Password must be at least 8 characters",
   "changePassword.confirmPasswordError": "Passwords do not match",
   "settings.change.name" : "Name",
-  "settings.change.surname" : "Surname"
-
+  "settings.change.surname" : "Surname",
+  "roads.path.start_road": "Start Road"
 }
