Admin page activity calendar component, progress rates is done and admin center have been changed.

--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -45,51 +45,50 @@
   "roads.search.placeholder": "Yol haritasında ara",
   "roads.path.next_path": "Sonraki Yol",
   "roads.sort_the_labs": "Yol haritalarını sırala",
-  "admin.time.title" : "Harcanan Zaman & Diller",
-  "admin.time.content" : "Bu grafik, haftalık bazda hangi yazılım dillerinde ne kadar zaman harcandığını göstermektedir.",
-  "admin.activity.title" : "Aktivite takvimi",
-  "admin.activity.content" :"Aktivite etkinlikleri laboratuvarların tamamlanmasıyla ölçülür.",
-  "admin.settings.button" : "Ayarlar",
-  "admin.profile.button" : "Kullanıcılar",
-  "admin.center.title" : "Yönetim Merkezi",
-  "admin.language.rates" : "Yazılım Dil İlerleme Oranları",
-  "settings.page.title" : "Ayarlar",
-  "settings.change.button" : "Değisiklikleri Kaydet",
-  "settings.password.button" : "Sifreyi Değistir",
-  "settings.change.username" : "Kullanıcı Adı",
-  "settings.change.github" : "Github Kullanıcı Adı",
-  "settings.old.password" : "Mevcut Şifre",
-  "settings.new.password" : "Yeni Şifre",
-  "settings.confirm.password" : "Şifreyi Onayla",
-  "userlist.order.name" : "Sıra",
-  "userlist.username.name" : "Kullanıcı Adı",
-  "userlist.level.name" : "Level",
-  "userlist.best.name" : "En İyi Oldugu Dil" ,
+  "admin.time.title": "Harcanan Zaman & Diller",
+  "admin.time.content": "Bu grafik, haftalık bazda hangi yazılım dillerinde ne kadar zaman harcandığını göstermektedir.",
+  "admin.activity.title": "Aktivite takvimi",
+  "admin.activity.content": "Aktivite etkinlikleri laboratuvarların tamamlanmasıyla ölçülür.",
+  "admin.settings.button": "Ayarlar",
+  "admin.profile.button": "Kullanıcılar",
+  "admin.center.title": "Yönetim Merkezi",
+  "admin.language.rates": "Yazılım Dillerinin İlerleme Oranları",
+  "settings.page.title": "Ayarlar",
+  "settings.change.button": "Değisiklikleri Kaydet",
+  "settings.password.button": "Sifreyi Değistir",
+  "settings.change.username": "Kullanıcı Adı",
+  "settings.change.github": "Github Kullanıcı Adı",
+  "settings.old.password": "Mevcut Şifre",
+  "settings.new.password": "Yeni Şifre",
+  "settings.confirm.password": "Şifreyi Onayla",
+  "userlist.order.name": "Sıra",
+  "userlist.username.name": "Kullanıcı Adı",
+  "userlist.level.name": "Level",
+  "userlist.best.name": "En İyi Oldugu Dil",
   "users.search.placeholder": "Kullanıcılarda ara",
   "users.sort_the_labs": "Kullanıcıları Sırala",
   "settings.usernameError": "Kullanıcı adı gereklidir",
   "settings.invalidError": "Geçersiz e-posta",
   "settings.emailError": "E-posta gereklidir",
-  "settings.githubError" : "Github kullanıcı adı gereklidir",
-  "settings.nameError" : "İsim gereklidir",
-  "settings.surnameError" : "Soyisim gereklidir",
+  "settings.githubError": "Github kullanıcı adı gereklidir",
+  "settings.nameError": "İsim gereklidir",
+  "settings.surnameError": "Soyisim gereklidir",
   "settings.currentPasswordError": "Mevcut şifre gereklidir",
   "settings.newPasswordError": "Yeni şifre gereklidir",
   "settings.confirmPasswordError": "Şifreler eşleşmiyor",
   "changePassword.oldPasswordError": "Mevcut şifre gereklidir",
   "changePassword.newPasswordError": "Yeni şifre gereklidir",
-  "changePassword.passwordMinError" : "Şifre en az 8 karakter olmalıdır",
+  "changePassword.passwordMinError": "Şifre en az 8 karakter olmalıdır",
   "changePassword.confirmPasswordError": "Şifreler eşleşmiyor",
-  "settings.change.name" : "İsim",
-  "settings.change.surname" : "Soyisim" ,
+  "settings.change.name": "İsim",
+  "settings.change.surname": "Soyisim",
   "lab.search.placeholder": "Lablarda ara",
-  "lab.sort_the_labs" : "Labları sırala",
-  "lab.button.solve" : "Çöz",
-  "labs.question.completed" : "Başarıyla tamamlandı!",
-  "labs.question.failed" : "Başarısız oldu!",
-  "labs.question.output" : "Çıktı:",
-  "labs.question.expected" : "Beklenen:",
-  "labs.question.hint" : "İpucu",
+  "lab.sort_the_labs": "Labları sırala",
+  "lab.button.solve": "Çöz",
+  "labs.question.completed": "Başarıyla tamamlandı!",
+  "labs.question.failed": "Başarısız oldu!",
+  "labs.question.output": "Çıktı:",
+  "labs.question.expected": "Beklenen:",
+  "labs.question.hint": "İpucu",
   "roads.path.start_road": "Yola Başla"
 }
-
