Login & session refresh bugs are fixed. Authentication functions have been controlled. Admin page design has been fixed

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "unauthorized": "Unauthorized",
   "all": "All",
   "in_progress": "In Progress",
   "completed": "Completed",
@@ -92,4 +93,3 @@
   "labs.question.expected": "Expected:",
   "labs.question.hint": "Hint"
 }
-
