--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -91,5 +91,10 @@
   "labs.question.failed": "Failed!",
   "labs.question.output": "Output:",
   "labs.question.expected": "Expected:",
-  "labs.question.hint": "Hint"
+  "labs.question.hint": "Hint",
+  "dialog.title.password" : "Subscribe",
+  "dialog.content.password" : "Please enter your password to update your data.",
+  "dialog.button.submit" : "Submit",
+  "dialog.button.cancel" : "Cancel"
+
 }
